修改标题. 图片改用外链 增加主页button功能

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link href="./static/css/bootstrap.css" rel="stylesheet">
 
     <link href="./static/css/mysite.css" rel="stylesheet">
-    <title>Document</title>
+    <title>NameCrawler Spider</title>
 </head>
 
 <body>
@@ -46,8 +46,8 @@
                         <br> with open-source solution.
                     </p>
                     <p>
-                        <a href="#" class="btn btn-default" role="button">Get Started</a>
-                        <a href="#" class="btn btn-default" role="button">Download</a>
+                        <a href="#introduce-anchor" class="btn btn-default" role="button">Get Started</a>
+                        <a href="https://github.com/zengsn/name-crawler-python" class="btn btn-default" role="button">Download</a>
                     </p>
                 </div>
             </div>
@@ -58,14 +58,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1><span>How It Works</span></h1>
+                    <h1><a name="introduce-anchor">How It Works</a></h1>
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-sm-12">
                     <div class="row">
                         <div class="introduce-item">
                             <div class="introduce-img-right col-sm-3 col-xs-4">
-                                <img src="../static/img/11.svg">
+                                <img src="http://o765kopml.bkt.clouddn.com/11.svg">
                             </div>
                             <div class="col-sm-6 col-xs-8">
                                 <div class="introduce-content">
@@ -86,14 +86,14 @@
                                 </div>
                             </div>
                             <div class="col-sm-3 introduce-img-left col-xs-4">
-                                <img src="../static/img/22.svg">
+                                <img src="http://o765kopml.bkt.clouddn.com/22.svg">
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="introduce-item">
                             <div class="introduce-img-right col-sm-3 col-xs-4">
-                                <img src="../static/img/33.svg">
+                                <img src="http://o765kopml.bkt.clouddn.com/33.svg">
                             </div>
                             <div class="col-sm-6 col-xs-8">
                                 <div class="introduce-content">
@@ -114,7 +114,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-3 introduce-img-left col-xs-4">
-                                <img src="../static/img/44.svg">
+                                <img src="http://o765kopml.bkt.clouddn.com/44.svg">
                             </div>
                         </div>
                     </div>
