--- a/templates/showdetail.html
+++ b/templates/showdetail.html
@@ -10,7 +10,7 @@
     <link href="./static/css/bootstrap.css" rel="stylesheet">
 
     <link href="./static/css/showdetails.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Show details</title>
 </head>
 
 <body>
