--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
     <link href="./static/css/bootstrap.css" rel="stylesheet">
     <link href="./static/css/font-awesome.css" rel="stylesheet">
     <link href="./static/css/about.css" rel="stylesheet">
-    <title>Document</title>
+    <title>About me</title>
 </head>
 
 <body>
@@ -50,12 +50,12 @@
                     <div class="col-md-7 right-summary">
                         <div class="row">
                             <div class="col-md-4 col-md-offset-5 head-pic">
-                                <img src="./static/img/IMG_0585_mini.JPG" class="img-responsive img-circle" alt="head-pic">
+                                <img src="http://o765kopml.bkt.clouddn.com/IMG_0585_mini.JPG" class="img-responsive img-circle" alt="head-pic">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-1 col-md-offset-4 col-xs-4">
-                                <img src="./static/img/GitHub-Mark-32px.png" alt="">
+                                <img src="http://o765kopml.bkt.clouddn.com/GitHub-Mark-32px.png" alt="">
                             </div>
                             <div class="col-md-2 col-md-offset-1 col-xs-8 social-href">
                                 <a href="https://github.com/findsomeoneyys">findsomeoneyys</a>
@@ -63,7 +63,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-1 col-md-offset-4 col-xs-4">
-                                <img src="./static/img/Mail_Gmail_32px_1076189_easyicon.net.png" alt="">
+                                <img src="http://o765kopml.bkt.clouddn.com/Mail_Gmail_32px_1076189_easyicon.net.png" alt="">
                             </div>
                             <div class="col-md-2 col-md-offset-1 col-xs-8 social-href">
                                 <A href="mailto:findsomeoneyysxxx@gmail.com ">findsomeoneyysxxx@gmail.com</A>
