bs和jq换成cdn加速

--- a/templates/showdetail.html
+++ b/templates/showdetail.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Bootstrap core CSS -->
-    <link href="./static/css/bootstrap.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">/css/bootstrap.css" rel="stylesheet">
 
     <link href="./static/css/showdetails.css" rel="stylesheet">
     <title>Show details</title>
@@ -115,9 +115,9 @@
 
 
     <!-- jQuery -->
-    <script src="./static/js/jquery-3.1.1.js"></script>
+    <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="./static/js/bootstrap.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./static/js/jsshowdetail.js"></script>
     <script src="./static/js/jqPaginator.min.js"></script>
 </body>
